--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,63 +1,135 @@
-@article{zaharia2018mlflow,
-  title   = {Accelerating the Machine Learning Lifecycle with MLFlow},
-  author  = {Zaharia, Matei and Chen, Andy and Others},
-  journal = {Databricks Technical Report},
-  year    = {2018},
-  note    = {Available at \url{https://mlflow.org}}
+@inproceedings{domingos2000vfdt,
+  title={Mining high-speed data streams},
+  author={Domingos, Pedro and Hulten, Geoff},
+  booktitle={Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={71--80},
+  year={2000},
+  organization={ACM}
 }
 
-@article{carlini2017poisoning,
-  title   = {Poisoning Attacks Against Neural Networks},
-  author  = {Carlini, Nicholas and Wagner, David},
-  journal = {arXiv preprint arXiv:1708.06733},
-  year    = {2017}
+@inproceedings{bifet2007adwin,
+  title={Learning from Time-Changing Data with Adaptive Windowing},
+  author={Bifet, Albert and Gavald{\`a}, Ricard},
+  booktitle={Proceedings of the Seventh SIAM International Conference on Data Mining},
+  pages={443--448},
+  year={2007},
+  organization={SIAM}
 }
 
-@inproceedings{sculley2015debt,
-  title     = {Hidden Technical Debt in Machine Learning Systems},
-  author    = {Sculley, D. and Holt, G. and Golovin, D. and Davydov, E. and Phillips, T. and Ebner, D. and Chaudhary, V. and Young, M. and Crespo, J. and Dennison, D.},
-  booktitle = {Advances in Neural Information Processing Systems},
-  volume    = {28},
-  year      = {2015}
+@article{gama2014conceptdrift,
+  title={A survey on concept drift adaptation},
+  author={Gama, Jo{\~a}o and Zliobaite, Indre and Bifet, Albert and Pechenizkiy, Mykola and Bouchachia, Abdelhamid},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={46},
+  number={4},
+  pages={1--37},
+  year={2014},
+  publisher={ACM}
 }
 
-@misc{opentelemetry2025,
-  title        = {OpenTelemetry Project},
-  author       = {{OpenTelemetry Authors}},
-  year         = {2025},
-  howpublished = {\url{https://opentelemetry.io}},
-  note         = {Accessed: 2025-07-13}
+@article{montiel2020river,
+  title={River: machine learning for streaming data in Python},
+  author={Montiel, Jacob and Halford, Max and Mastelini, S{\'e}rgio and others},
+  journal={Journal of Machine Learning Research},
+  volume={21},
+  number={1},
+  pages={1--5},
+  year={2020}
 }
 
-@article{oltramari2020cognitive,
-  title   = {Cognitive Security: A Unified Perspective},
-  author  = {Oltramari, Alessandro and Others},
-  journal = {IEEE Security \& Privacy},
-  volume  = {18},
-  number  = {4},
-  pages   = {34--41},
-  year    = {2020}
+@inproceedings{bifet2010moa,
+  title={MOA: Massive Online Analysis},
+  author={Bifet, Albert and Holmes, Geoffrey and Kirkby, Richard and Pfahringer, Bernhard},
+  booktitle={Journal of Machine Learning Research Workshop and Conference Proceedings},
+  year={2010}
 }
 
-@misc{trustoncloud2023,
-  title        = {Automated Cloud Security Posture Benchmarking},
-  author       = {{TrustOnCloud}},
-  year         = {2023},
-  howpublished = {\url{https://trustoncloud.com}},
-  note         = {Whitepaper}
+@inproceedings{bodik2010fingerprinting,
+  title={Fingerprinting the datacenter: automated classification of performance crises},
+  author={Bodik, Peter and Goldszmidt, Moises and Fox, Armando and Woodard, Dawn and Andersen, Hans},
+  booktitle={Proceedings of the 5th European conference on Computer systems},
+  pages={111--124},
+  year={2010}
 }
 
-@inproceedings{finnie2021metalearning,
-  title     = {Meta-Learning for Continual Adaptation},
-  author    = {Finnie, James and Others},
-  booktitle = {Proceedings of the 38th International Conference on Machine Learning (ICML)},
-  year      = {2021},
-  note      = {arXiv:2102.11209}
+@article{reimers2019sbert,
+  title={Sentence-BERT: Sentence embeddings using Siamese BERT-networks},
+  author={Reimers, Nils and Gurevych, Iryna},
+  journal={arXiv preprint arXiv:1908.10084},
+  year={2019}
 }
-@misc{mlflow2023,
-  title        = {MLflow: An Open Source Platform for the Machine Learning Lifecycle},
-  author       = {{MLflow Authors}},
-  year         = {2023},
-  howpublished = {\url{https://mlflow.org}},
-  note         = {Accessed: 2023-10-01}
+
+@article{johnson2017faiss,
+  title={Billion-scale similarity search with GPUs},
+  author={Johnson, Jeff and Douze, Matthijs and J{\'e}gou, Herv{\'e}},
+  journal={IEEE Transactions on Big Data},
+  year={2017},
+  publisher={IEEE}
+}
+
+@inproceedings{ribeiro2016lime,
+  title={"Why Should I Trust You?": Explaining the Predictions of Any Classifier},
+  author={Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
+  booktitle={Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  pages={1135--1144},
+  year={2016},
+  organization={ACM}
+}
+
+@article{lundberg2017shap,
+  title={A Unified Approach to Interpreting Model Predictions},
+  author={Lundberg, Scott M and Lee, Su-In},
+  journal={Advances in Neural Information Processing Systems},
+  volume={30},
+  year={2017}
+}
+
+@article{barreno2006secureml,
+  title={Can machine learning be secure?},
+  author={Barreno, Marco and Nelson, Blaine and Sears, Russell and Joseph, Anthony D and Tygar, J Doug},
+  journal={Proceedings of the 2006 ACM Symposium on Information, computer and communications security},
+  pages={16--25},
+  year={2006}
+}
+
+@article{biggio2012poisoning,
+  title={Poisoning attacks against support vector machines},
+  author={Biggio, Battista and Nelson, Blaine and Laskov, Pavel},
+  journal={Proceedings of the 29th International Conference on Machine Learning},
+  year={2012}
+}
+
+@inproceedings{carlini2017poisoning,
+  title={Poisoning attacks against neural networks},
+  author={Carlini, Nicholas and Liu, Chang and Erlingsson, Ulfar and Kos, Jeremiah and Song, Dawn},
+  booktitle={IEEE Symposium on Security and Privacy (SP)},
+  pages={1--15},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{kephart2003autonomic,
+  title={The vision of autonomic computing},
+  author={Kephart, Jeffrey O and Chess, David M},
+  journal={Computer},
+  volume={36},
+  number={1},
+  pages={41--50},
+  year={2003},
+  publisher={IEEE}
+}
+
+@misc{google2016sre,
+  title={The Four Golden Signals},
+  author={Google SRE},
+  year={2016},
+  howpublished={\url{https://sre.google/sre-book/monitoring-distributed-systems/}}
+}
+
+@inproceedings{xu2016experience,
+  title={Experience-driven management of big data systems},
+  author={Xu, Wenqing and Chen, Yuan and others},
+  booktitle={Proceedings of the ACM Symposium on Cloud Computing},
+  pages={1--13},
+  year={2016}
 }
