--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,135 +1,150 @@
-@inproceedings{domingos2000vfdt,
-  title={Mining high-speed data streams},
-  author={Domingos, Pedro and Hulten, Geoff},
-  booktitle={Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
-  pages={71--80},
-  year={2000},
-  organization={ACM}
-}
-
 @inproceedings{bifet2007adwin,
-  title={Learning from Time-Changing Data with Adaptive Windowing},
-  author={Bifet, Albert and Gavald{\`a}, Ricard},
-  booktitle={Proceedings of the Seventh SIAM International Conference on Data Mining},
-  pages={443--448},
-  year={2007},
-  organization={SIAM}
-}
-
-@article{gama2014conceptdrift,
-  title={A survey on concept drift adaptation},
-  author={Gama, Jo{\~a}o and Zliobaite, Indre and Bifet, Albert and Pechenizkiy, Mykola and Bouchachia, Abdelhamid},
-  journal={ACM Computing Surveys (CSUR)},
-  volume={46},
-  number={4},
-  pages={1--37},
-  year={2014},
-  publisher={ACM}
-}
-
-@article{montiel2020river,
-  title={River: machine learning for streaming data in Python},
-  author={Montiel, Jacob and Halford, Max and Mastelini, S{\'e}rgio and others},
-  journal={Journal of Machine Learning Research},
-  volume={21},
-  number={1},
-  pages={1--5},
-  year={2020}
-}
-
-@inproceedings{bifet2010moa,
-  title={MOA: Massive Online Analysis},
-  author={Bifet, Albert and Holmes, Geoffrey and Kirkby, Richard and Pfahringer, Bernhard},
-  booktitle={Journal of Machine Learning Research Workshop and Conference Proceedings},
-  year={2010}
-}
-
-@inproceedings{bodik2010fingerprinting,
-  title={Fingerprinting the datacenter: automated classification of performance crises},
-  author={Bodik, Peter and Goldszmidt, Moises and Fox, Armando and Woodard, Dawn and Andersen, Hans},
-  booktitle={Proceedings of the 5th European conference on Computer systems},
-  pages={111--124},
-  year={2010}
-}
-
-@article{reimers2019sbert,
-  title={Sentence-BERT: Sentence embeddings using Siamese BERT-networks},
-  author={Reimers, Nils and Gurevych, Iryna},
-  journal={arXiv preprint arXiv:1908.10084},
-  year={2019}
+  title     = {Learning from Time-Changing Data with Adaptive Windowing},
+  author    = {Bifet, Albert and Gavald{\`a}, Ricard},
+  booktitle = {Proceedings of the 2007 SIAM International Conference on Data Mining},
+  year      = {2007}
 }
 
 @article{johnson2017faiss,
-  title={Billion-scale similarity search with GPUs},
-  author={Johnson, Jeff and Douze, Matthijs and J{\'e}gou, Herv{\'e}},
-  journal={IEEE Transactions on Big Data},
-  year={2017},
-  publisher={IEEE}
+  title   = {Billion-scale similarity search with GPUs},
+  author  = {Johnson, Jeff and Douze, Matthijs and J{\'e}gou, Herv{\'e}},
+  journal = {IEEE Transactions on Big Data},
+  year    = {2017},
+  url     = {https://github.com/facebookresearch/faiss}
 }
 
 @inproceedings{ribeiro2016lime,
-  title={"Why Should I Trust You?": Explaining the Predictions of Any Classifier},
-  author={Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
-  booktitle={Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
-  pages={1135--1144},
-  year={2016},
-  organization={ACM}
+  title     = {``Why Should I Trust You?'': Explaining the Predictions of Any Classifier},
+  author    = {Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
+  booktitle = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2016}
 }
 
-@article{lundberg2017shap,
-  title={A Unified Approach to Interpreting Model Predictions},
-  author={Lundberg, Scott M and Lee, Su-In},
-  journal={Advances in Neural Information Processing Systems},
-  volume={30},
-  year={2017}
+@inproceedings{lundberg2017shap,
+  title     = {A Unified Approach to Interpreting Model Predictions},
+  author    = {Lundberg, Scott and Lee, Su-In},
+  booktitle = {Advances in Neural Information Processing Systems},
+  year      = {2017}
 }
 
-@article{barreno2006secureml,
-  title={Can machine learning be secure?},
-  author={Barreno, Marco and Nelson, Blaine and Sears, Russell and Joseph, Anthony D and Tygar, J Doug},
-  journal={Proceedings of the 2006 ACM Symposium on Information, computer and communications security},
-  pages={16--25},
-  year={2006}
+@book{google2016sre,
+  title     = {Site Reliability Engineering: How Google Runs Production Systems},
+  author    = {Beyer, Betsy and Jones, Chris and Petoff, Jennifer and Murphy, Niall},
+  year      = {2016},
+  publisher = {O'Reilly Media}
+}
+
+@article{gama2014conceptdrift,
+  title   = {A Survey on Concept Drift Adaptation},
+  author  = {Gama, Jo{\~a}o and {\v{Z}}liobait{\.e}, Indr{\`e} and Bifet, Albert and Pechenizkiy, Mykola and others},
+  journal = {ACM Computing Surveys},
+  year    = {2014}
+}
+
+@inproceedings{montiel2020river,
+  title     = {River: Machine Learning for Streaming Data in Python},
+  author    = {Montiel, Jacob and Halford, Max and Mastelini, Silas and others},
+  booktitle = {Proceedings of the 29th ACM International Conference on Information and Knowledge Management},
+  year      = {2020},
+  url       = {https://arxiv.org/abs/2012.04740}
+}
+
+@inproceedings{domingos2000vfdt,
+  title     = {Mining high-speed data streams},
+  author    = {Domingos, Pedro and Hulten, Geoff},
+  booktitle = {Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
+  year      = {2000}
+}
+
+@inproceedings{finn2019online,
+  title     = {Online Meta-Learning},
+  author    = {Finn, Chelsea and Rajeswaran, Aravind and Kakade, Sham and Levine, Sergey},
+  booktitle = {International Conference on Machine Learning},
+  year      = {2019},
+  url       = {https://arxiv.org/abs/1902.08438}
+}
+
+@article{carlini2017poisoning,
+  title   = {Poisoning Attacks Against Neural Networks},
+  author  = {Carlini, Nicholas and Liu, Chang and Erlingsson, {\'U}lfar and Kos, Jernej and Song, Dawn},
+  journal = {IEEE Symposium on Security and Privacy},
+  year    = {2017}
+}
+
+@inproceedings{barreno2006secureml,
+  title     = {Can Machine Learning Be Secure?},
+  author    = {Barreno, Marco and Nelson, Blaine and Sears, Russell and Joseph, Anthony and Tygar, J Doug},
+  booktitle = {Proceedings of the 2006 ACM Symposium on Information, Computer and Communications Security},
+  year      = {2006}
 }
 
 @article{biggio2012poisoning,
-  title={Poisoning attacks against support vector machines},
-  author={Biggio, Battista and Nelson, Blaine and Laskov, Pavel},
-  journal={Proceedings of the 29th International Conference on Machine Learning},
-  year={2012}
+  title   = {Poisoning Attacks against Support Vector Machines},
+  author  = {Biggio, Battista and Nelson, Blaine and Laskov, Pavel},
+  journal = {arXiv preprint arXiv:1206.6389},
+  year    = {2012}
 }
 
-@inproceedings{carlini2017poisoning,
-  title={Poisoning attacks against neural networks},
-  author={Carlini, Nicholas and Liu, Chang and Erlingsson, Ulfar and Kos, Jeremiah and Song, Dawn},
-  booktitle={IEEE Symposium on Security and Privacy (SP)},
-  pages={1--15},
-  year={2017},
-  organization={IEEE}
+@article{duan2024mamlkad,
+  title   = {MAML-KAD: Meta-Learning for Anomaly Detection in AIOps},
+  author  = {Duan, Yuxuan and others},
+  journal = {Electronics},
+  volume  = {13},
+  number  = {11},
+  year    = {2024},
+  url     = {https://www.mdpi.com/2079-9292/13/11/2102}
+}
+
+@inproceedings{jha2024sam,
+  title     = {Sub-series Augmentation and Meta-Learning for Cross-Cloud Anomaly Detection},
+  author    = {Jha, Saurabh and others},
+  booktitle = {IEEE International Conference on Cloud Computing (CLOUD)},
+  year      = {2024},
+  url       = {https://saurabhjha.one/pubs/CLOUD2024/paper.pdf}
+}
+
+@article{tian2024omlog,
+  title   = {OMLog: Online Meta-Learning for Log Anomaly Detection},
+  author  = {Tian, Yu and others},
+  journal = {arXiv preprint arXiv:2410.16612},
+  year    = {2024},
+  url     = {https://arxiv.org/abs/2410.16612}
+}
+
+@misc{opentelemetry2023spec,
+  title  = {OpenTelemetry Specification},
+  author = {{OpenTelemetry Project}},
+  year   = {2023},
+  url    = {https://opentelemetry.io}
+}
+
+@misc{grafana2023adaptive,
+  title  = {Adaptive Metrics: Cost-Effective Telemetry Pipelines},
+  author = {{Grafana Labs}},
+  year   = {2023},
+  url    = {https://grafana.com/blog}
 }
 
 @article{kephart2003autonomic,
-  title={The vision of autonomic computing},
-  author={Kephart, Jeffrey O and Chess, David M},
-  journal={Computer},
-  volume={36},
-  number={1},
-  pages={41--50},
-  year={2003},
-  publisher={IEEE}
+  title   = {The Vision of Autonomic Computing},
+  author  = {Kephart, Jeffrey and Chess, David},
+  journal = {Computer},
+  volume  = {36},
+  number  = {1},
+  pages   = {41--50},
+  year    = {2003}
 }
 
-@misc{google2016sre,
-  title={The Four Golden Signals},
-  author={Google SRE},
-  year={2016},
-  howpublished={\url{https://sre.google/sre-book/monitoring-distributed-systems/}}
+@inproceedings{yang2025llmrl,
+  title     = {Closed-Loop Fault Remediation with LLMs and Reinforcement Learning},
+  author    = {Yang, X. and others},
+  booktitle = {Proceedings of the ACM/IEEE Symposium on Autonomic Computing},
+  year      = {2025},
+  note      = {to appear}
 }
-
-@inproceedings{xu2016experience,
-  title={Experience-driven management of big data systems},
-  author={Xu, Wenqing and Chen, Yuan and others},
-  booktitle={Proceedings of the ACM Symposium on Cloud Computing},
-  pages={1--13},
-  year={2016}
+@inproceedings{chen2023llmops,
+  title     = {LLMOps: A Framework for Large Language Model Operations},
+  author    = {Chen, Y. and others},
+  booktitle = {Proceedings of the ACM/IEEE Symposium on Autonomic Computing},
+  year      = {2023}
 }
