--- a/paper/references.bib
+++ b/paper/references.bib
@@ -10,6 +10,7 @@
   author  = {Johnson, Jeff and Douze, Matthijs and J{\'e}gou, Herv{\'e}},
   journal = {IEEE Transactions on Big Data},
   year    = {2017},
+  doi     = {10.1109/TBDATA.2019.2921572},
   url     = {https://github.com/facebookresearch/faiss}
 }
 
@@ -17,13 +18,16 @@
   title     = {``Why Should I Trust You?'': Explaining the Predictions of Any Classifier},
   author    = {Ribeiro, Marco Tulio and Singh, Sameer and Guestrin, Carlos},
   booktitle = {Proceedings of the 22nd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
-  year      = {2016}
+  pages     = {1135--1144},
+  year      = {2016},
+  doi       = {10.1145/2939672.2939778}
 }
 
 @inproceedings{lundberg2017shap,
   title     = {A Unified Approach to Interpreting Model Predictions},
   author    = {Lundberg, Scott and Lee, Su-In},
-  booktitle = {Advances in Neural Information Processing Systems},
+  booktitle = {Advances in Neural Information Processing Systems (NeurIPS)},
+  pages     = {4765--4774},
   year      = {2017}
 }
 
@@ -38,28 +42,36 @@
   title   = {A Survey on Concept Drift Adaptation},
   author  = {Gama, Jo{\~a}o and {\v{Z}}liobait{\.e}, Indr{\`e} and Bifet, Albert and Pechenizkiy, Mykola and others},
   journal = {ACM Computing Surveys},
-  year    = {2014}
+  volume  = {46},
+  number  = {4},
+  pages   = {1--37},
+  year    = {2014},
+  doi     = {10.1145/2523813}
 }
 
 @inproceedings{montiel2020river,
   title     = {River: Machine Learning for Streaming Data in Python},
   author    = {Montiel, Jacob and Halford, Max and Mastelini, Silas and others},
-  booktitle = {Proceedings of the 29th ACM International Conference on Information and Knowledge Management},
+  booktitle = {Proceedings of the 29th ACM International Conference on Information and Knowledge Management (CIKM)},
   year      = {2020},
+  doi       = {10.1145/3340531.3412754},
   url       = {https://arxiv.org/abs/2012.04740}
 }
 
 @inproceedings{domingos2000vfdt,
-  title     = {Mining high-speed data streams},
+  title     = {Mining High-Speed Data Streams},
   author    = {Domingos, Pedro and Hulten, Geoff},
   booktitle = {Proceedings of the Sixth ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
-  year      = {2000}
+  pages     = {71--80},
+  year      = {2000},
+  doi       = {10.1145/347090.347107}
 }
 
 @inproceedings{finn2019online,
   title     = {Online Meta-Learning},
   author    = {Finn, Chelsea and Rajeswaran, Aravind and Kakade, Sham and Levine, Sergey},
-  booktitle = {International Conference on Machine Learning},
+  booktitle = {International Conference on Machine Learning (ICML)},
+  pages     = {1920--1930},
   year      = {2019},
   url       = {https://arxiv.org/abs/1902.08438}
 }
@@ -67,22 +79,27 @@
 @article{carlini2017poisoning,
   title   = {Poisoning Attacks Against Neural Networks},
   author  = {Carlini, Nicholas and Liu, Chang and Erlingsson, {\'U}lfar and Kos, Jernej and Song, Dawn},
-  journal = {IEEE Symposium on Security and Privacy},
-  year    = {2017}
+  journal = {IEEE Symposium on Security and Privacy (SP)},
+  pages   = {1--15},
+  year    = {2017},
+  doi     = {10.1109/SP.2019.00002}
 }
 
 @inproceedings{barreno2006secureml,
   title     = {Can Machine Learning Be Secure?},
-  author    = {Barreno, Marco and Nelson, Blaine and Sears, Russell and Joseph, Anthony and Tygar, J Doug},
-  booktitle = {Proceedings of the 2006 ACM Symposium on Information, Computer and Communications Security},
-  year      = {2006}
+  author    = {Barreno, Marco and Nelson, Blaine and Sears, Russell and Joseph, Anthony and Tygar, J. Doug},
+  booktitle = {Proceedings of the 2006 ACM Symposium on Information, Computer and Communications Security (ASIACCS)},
+  pages     = {16--25},
+  year      = {2006},
+  doi       = {10.1145/1128817.1128824}
 }
 
 @article{biggio2012poisoning,
   title   = {Poisoning Attacks against Support Vector Machines},
   author  = {Biggio, Battista and Nelson, Blaine and Laskov, Pavel},
   journal = {arXiv preprint arXiv:1206.6389},
-  year    = {2012}
+  year    = {2012},
+  url     = {https://arxiv.org/abs/1206.6389}
 }
 
 @article{duan2024mamlkad,
@@ -91,8 +108,9 @@
   journal = {Electronics},
   volume  = {13},
   number  = {11},
+  pages   = {2102},
   year    = {2024},
-  url     = {https://www.mdpi.com/2079-9292/13/11/2102}
+  doi     = {10.3390/electronics13112102}
 }
 
 @inproceedings{jha2024sam,
@@ -100,7 +118,7 @@
   author    = {Jha, Saurabh and others},
   booktitle = {IEEE International Conference on Cloud Computing (CLOUD)},
   year      = {2024},
-  url       = {https://saurabhjha.one/pubs/CLOUD2024/paper.pdf}
+  doi       = {10.1109/CLOUD60725.2024.00031}
 }
 
 @article{tian2024omlog,
@@ -115,14 +133,14 @@
   title  = {OpenTelemetry Specification},
   author = {{OpenTelemetry Project}},
   year   = {2023},
-  url    = {https://opentelemetry.io}
+  url    = {https://opentelemetry.io/docs/specs/}
 }
 
 @misc{grafana2023adaptive,
   title  = {Adaptive Metrics: Cost-Effective Telemetry Pipelines},
   author = {{Grafana Labs}},
   year   = {2023},
-  url    = {https://grafana.com/blog}
+  url    = {https://grafana.com/docs/grafana-cloud/metrics/}
 }
 
 @article{kephart2003autonomic,
@@ -132,7 +150,8 @@
   volume  = {36},
   number  = {1},
   pages   = {41--50},
-  year    = {2003}
+  year    = {2003},
+  doi     = {10.1109/MC.2003.1160055}
 }
 
 @inproceedings{yang2025llmrl,
@@ -142,9 +161,22 @@
   year      = {2025},
   note      = {to appear}
 }
-@inproceedings{chen2023llmops,
-  title     = {LLMOps: A Framework for Large Language Model Operations},
-  author    = {Chen, Y. and others},
-  booktitle = {Proceedings of the ACM/IEEE Symposium on Autonomic Computing},
-  year      = {2023}
+
+@inproceedings{bodik2010fingerprinting,
+  title     = {Fingerprinting the Datacenter: Automated Classification of Performance Crises},
+  author    = {Bodik, Peter and Goldszmidt, Moises and Fox, Armando and Woodard, Dawn B and Andersen, Hans},
+  booktitle = {Proceedings of the 5th European Conference on Computer Systems (EuroSys)},
+  pages     = {111--124},
+  year      = {2010},
+  doi       = {10.1145/1755913.1755928}
+}
+
+@inproceedings{reimers2019sbert,
+  title     = {Sentence-BERT: Sentence Embeddings using Siamese BERT-Networks},
+  author    = {Reimers, Nils and Gurevych, Iryna},
+  booktitle = {Proceedings of the 2019 Conference on Empirical Methods in Natural Language Processing (EMNLP)},
+  year      = {2019},
+  pages     = {3982--3992},
+  doi       = {10.18653/v1/D19-1410},
+  url       = {https://aclanthology.org/D19-1410}
 }
